--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
     <div class="container align-center">
         <div class="row justify-content-md-start justify-content-md-center">
             <div class="mbr-white col-md-12 col-lg-7">
-                <h1 class="mbr-section-title mbr-regular pb-3 align-left mbr-fonts-style display-1">We have online lessons and funfacts!</h1>
+                <h1 class="mbr-section-title mbr-regular pb-3 align-left mbr-fonts-style display-1">WDM | Courses</h1>
                 
-                
+                <p class="mbr-text mbr-light pb-3 align-left mbr-fonts-style display-7">
+                    Free Biblical education resources for anyone.</p>
                 <div class="align-left mbr-section-btn"><a class="btn btn-md btn-warning display-4" href="https://courses.wavedm.net/">Learn More</a></div>
             </div>
         </div>
