--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <li class="nav-item">
                   <a class="nav-link link text-black display-4" href="https://earth.wavedm.net/" target="_blank">
                        Earth</a>
-              </li></ul>
+              </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://games.wavedm.net/" target="_blank">GX</a></li></ul>
         </div>
 
         <div class="brand-container">
@@ -72,9 +72,10 @@
 
         <div class="right-menu">
           <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                <a class="nav-link link text-black display-4" href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank">
-                    Contact Us</a>
-            </li>
+                <a class="nav-link link text-black display-4" href="about.html">
+                    About</a>
+            </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank">
+                    Contact Us</a></li>
             <li class="nav-item">
                 <a class="nav-link link text-black display-4" href="privacy.html">
                     Privacy</a>
