--- a/index.html
+++ b/index.html
@@ -255,6 +255,14 @@
     </div>
 </section>
 
+<div id="custom-html-1y"><!-- Type valid HTML here -->
+
+<div>
+<center>
+    <img style="width: 50mm;" src="https://www.wavedm.net/assets/images/wave-1242x1000.png" alt="Wave Digital Ministries Network"><img style="width: 70mm;" src="https://api.thegreenwebfoundation.org/greencheckimage/www.wavedm.net" alt="This website is hosted Green - checked by thegreenwebfoundation.org">
+    </center>
+</div></div>
+
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
