--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   
   
   
+
 <meta name="theme-color" content="#ab9776">
 <link rel="manifest" href="manifest.json">
 <script src="sw-connect.js"></script>
@@ -36,8 +37,7 @@
 <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="apple-mobile-web-app-title" content="Wave Digital Ministries">
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
-</head>
+<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
 <body>
   <section class="extMenu12 menu popup-btn-cards cid-rUtEBVOxs5" once="menu" id="extMenu13-n">
 
@@ -209,8 +209,8 @@
             <div class="mbr-white col-md-12 col-lg-7">
                 <h1 class="mbr-section-title mbr-regular pb-3 align-left mbr-fonts-style display-1">WDM | Contributors</h1>
                 
-                <p class="mbr-text mbr-light pb-3 align-left mbr-fonts-style display-7">Our network of Christian social media influencers and content creators.</p>
-                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-warning display-4" href="https://wavedm.mn.co" target="_blank">Learn More</a></div>
+                <p class="mbr-text mbr-light pb-3 align-left mbr-fonts-style display-7">Our network of Christian content creators and social media influencers.</p>
+                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-warning display-4" href="https://wavedm.mn.co/" target="_blank">Learn More</a></div>
             </div>
         </div>
     </div>
@@ -253,6 +253,7 @@
             </div>
         </div>
     </div>
+    <center><a href="https://twitter.com/intent/tweet?button_hashtag=beawave4christ&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #beawave4christ</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></center>
 </section>
 
 
