--- a/ministryconnect.html
+++ b/ministryconnect.html
@@ -22,6 +22,7 @@
   
   
   
+
 <meta name="theme-color" content="#ab9776">
 <link rel="manifest" href="manifest.json">
 <script src="sw-connect.js"></script>
@@ -35,8 +36,7 @@
 <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="apple-mobile-web-app-title" content="Wave Digital Ministries">
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
-</head>
+<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
 <body>
   <section class="extMenu12 menu popup-btn-cards cid-rUtEBVOxs5" once="menu" id="extMenu13-t">
 
@@ -221,6 +221,12 @@
         </div>
     </div>
 </section>
+
+<div id="custom-html-24"><!-- Type valid HTML here -->
+
+<div>
+    <center><a href="https://twitter.com/intent/tweet?button_hashtag=beawave4christ&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #beawave4christ</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></center>
+</div></div>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
