--- a/contact.html
+++ b/contact.html
@@ -77,6 +77,10 @@
                             <path d="M9 16a5 5 0 1 1 6 0a3.5 3.5 0 0 0 -1 3a2 2 0 0 1 -4 0a3.5 3.5 0 0 0 -1 -3"></path>
                             <line x1="9.7" y1="17" x2="14.3" y2="17"></line>
                         </svg></a></li>
+                <li class="list-inline-item me-4"><a href="https://gettr.com/user/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-g text-light">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M18 9a5 5 0 0 0 -5 -5h-2a5 5 0 0 0 -5 5v6a5 5 0 0 0 5 5h2a5 5 0 0 0 5 -5v-2h-4"></path>
+                        </svg></a></li>
                 <li class="list-inline-item me-4"><a href="https://www.tiktok.com/@wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-tiktok text-light">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M9 12a4 4 0 1 0 4 4v-12a5 5 0 0 0 5 5"></path>
