--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="font-family: Quicksand, sans-serif;">
+<html data-bs-theme="light" lang="en" style="font-family: Quicksand, sans-serif;">
 
 <head>
     <meta charset="utf-8">
@@ -27,7 +27,7 @@
 
 <body style="font-family: Quicksand, sans-serif;" onload="disableselect(), latest()">
     <!-- Start: Navbar Right Links (Dark) -->
-    <nav class="navbar navbar-dark navbar-expand-md sticky-top bg-dark py-3">
+    <nav class="navbar navbar-expand-md sticky-top bg-dark py-3 navbar-dark">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse text-end" id="navcol-5" style="font-size: 18px;">
                 <ul class="navbar-nav ms-auto">
@@ -142,23 +142,6 @@
             </div>
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mood-happy" style="color: #087F81;">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <circle cx="12" cy="12" r="9"></circle>
-                            <line x1="9" y1="9" x2="9.01" y2="9"></line>
-                            <line x1="15" y1="9" x2="15.01" y2="9"></line>
-                            <path d="M8 13a4 4 0 1 0 8 0m0 0h-8"></path>
-                        </svg></div>
-                    <div class="px-3">
-                        <h4 style="font-family: Quicksand, sans-serif;">Christian Meme Channel</h4>
-                        <p>CMC is an outreach project that utilizes comedy as a method to connect with people and share God's love.</p><a href="https://cmc.wavedm.net/" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
-                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
-                            </svg></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
                     <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-code" style="color: #087F81;">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <polyline points="7 8 3 12 7 16"></polyline>
@@ -173,72 +156,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded text-dark d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-file-search" style="color: #087F81;">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
-                            <path d="M12 21h-5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v4.5"></path>
-                            <circle cx="16.5" cy="17.5" r="2.5"></circle>
-                            <line x1="18.5" y1="19.5" x2="21" y2="22"></line>
-                        </svg></div>
-                    <div class="px-3">
-                        <h4 style="font-family: Quicksand, sans-serif;">Scholar (Beta)</h4>
-                        <p>WDM Scholar is a Christian, academic, research. platform</p><a href="https://scholar.wavedm.net/" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
-                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
-                            </svg></a>
-                    </div>
-                </div>
-            </div>
         </div>
     </div><!-- End: Features Centered Icons -->
-    <!-- Start: latest desktop -->
-    <section class="d-none d-print-block d-sm-none d-md-block d-lg-block d-xl-block d-xxl-block" style="margin-bottom: 20px;">
-        <!-- Start: 1 Row 1 Column -->
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1 style="text-align: center;">Latest</h1>
-                </div>
-            </div>
-        </div><!-- End: 1 Row 1 Column -->
-        <section style="margin-top: 15px;">
-            <!-- Start: 1 Row 1 Column -->
-            <div class="container" style="margin-top: 10px;">
-                <div class="row">
-                    <div class="col-md-12 d-md-flex justify-content-md-center">
-                        <div class="card" style="width: 50%;border-style: none;">
-                            <div class="card-body"><script src="https://www.wavedm.net/tags/latest.js"></script>
-
-<h4 id="title1" class="card-title"></h4>
-<h6 id="author1"  class="text-muted card-subtitle mb-2" style="font-family: 'La Belle Aurore', serif;"></h6>
-
-<div id="content1"></div>
-<div id="content01"></div>
-</div>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- End: 1 Row 1 Column -->
-            <!-- Start: 1 Row 1 Column -->
-            <div class="container" style="margin-top: 20px;">
-                <div class="row">
-                    <div class="col-md-12 d-md-flex justify-content-md-center">
-                        <div class="card" style="width: 50%;border-style: none;">
-                            <div class="card-body"><script src="https://www.wavedm.net/tags/latest.js"></script>
-
-<h4 id="title11" class="card-title"></h4>
-<h6 id="author11"  class="text-muted card-subtitle mb-2" style="font-family: 'La Belle Aurore', serif;"></h6>
-
-<div id="content11"></div>
-<div id="content011"></div>
-</div>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- End: 1 Row 1 Column -->
-        </section>
-    </section><!-- End: latest desktop -->
     <!-- Start: Footer Dark -->
     <footer class="text-center bg-dark">
         <div class="container text-white py-4 py-lg-5">
@@ -255,9 +174,10 @@
                             <circle cx="12" cy="12" r="3"></circle>
                             <line x1="16.5" y1="7.5" x2="16.5" y2="7.501"></line>
                         </svg></a></li>
-                <li class="list-inline-item me-4"><a href="https://twitter.com/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-twitter text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
+                <li class="list-inline-item me-4"><a href="https://twitter.com/wdm_net" target="_blank" style="color: var(--bs-body-bg);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-x text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"></path>
+                            <line x1="7" y1="4" x2="17" y2="20"></line>
+                            <line x1="17" y1="4" x2="7" y2="20"></line>
                         </svg></a></li>
                 <li class="list-inline-item me-4"><a href="https://www.minds.com/wdm_net/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-bulb text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
