--- a/webdesign.html
+++ b/webdesign.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-bs-theme="light" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -27,7 +27,7 @@
 
 <body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
-    <nav class="navbar navbar-dark navbar-expand-md sticky-top bg-dark py-3">
+    <nav class="navbar navbar-expand-md sticky-top bg-dark py-3 navbar-dark">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse text-end" id="navcol-5" style="font-size: 18px;">
                 <ul class="navbar-nav ms-auto">
@@ -133,9 +133,10 @@
                             <circle cx="12" cy="12" r="3"></circle>
                             <line x1="16.5" y1="7.5" x2="16.5" y2="7.501"></line>
                         </svg></a></li>
-                <li class="list-inline-item me-4"><a href="https://twitter.com/wdm_net" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-twitter text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
+                <li class="list-inline-item me-4"><a href="https://twitter.com/wdm_net" target="_blank" style="color: var(--bs-body-bg);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-letter-x text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"></path>
+                            <line x1="7" y1="4" x2="17" y2="20"></line>
+                            <line x1="17" y1="4" x2="7" y2="20"></line>
                         </svg></a></li>
                 <li class="list-inline-item me-4"><a href="https://www.minds.com/wdm_net/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-bulb text-light" data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
